primera version embbbeded

--- a/PracticaFinal/codigo/Prueba red.ipynb
+++ b/PracticaFinal/codigo/Prueba red.ipynb
@@ -25,10 +25,10 @@
     "\n",
     "def plot_graphs(history, metric):\n",
     "    plt.plot(history.history[metric])\n",
-    "    plt.plot(history.history['val_'+metric], '')\n",
+    "    plt.plot(history.history['val_' + metric], '')\n",
     "    plt.xlabel(\"Epochs\")\n",
     "    plt.ylabel(metric)\n",
-    "    plt.legend([metric, 'val_'+metric])"
+    "    plt.legend([metric, 'val_' + metric])"
    ]
   },
   {
@@ -161,21 +161,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Young Adult', 'Fantasy', 'Classics', ..., 'Nonfiction',\n",
-       "       'Nonfiction', 'Criticism'], dtype=object)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.values[:, 1]"
+    "dataset = np.array(data)"
    ]
   },
   {
@@ -184,21 +172,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = np.array(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "np.random.shuffle(dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +186,7 @@
        "(43796, 2)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +207,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "194"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +237,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +282,7 @@
        "(43796, 194)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +293,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_vector[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paranormal\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, genre in enumerate(label_vector[0]):\n",
+    "    if genre == 1:\n",
+    "        print(out_vector[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Paranormal'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[0, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +387,7 @@
        "30657"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,17 +398,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_dataset_X = texts[:size_train]\n",
+    "train_y = label_vector[:size_train]\n",
     "test_dataset_X = texts[size_train:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +427,7 @@
        "<BatchDataset shapes: ((None,), (None, 194)), types: (tf.string, tf.int64)>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +447,7 @@
      "text": [
       "tf.Tensor(\n",
       "[[0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 1]\n",
       " [0 0 0 ... 0 0 0]\n",
       " ...\n",
       " [0 0 0 ... 0 0 0]\n",
@@ -396,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -472,44 +539,44 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      "4380/4380 [==============================] - 14s 3ms/step - loss: 3.1986 - accuracy: 0.1797\n",
+      "4380/4380 [==============================] - 20s 5ms/step - loss: 3.2229 - accuracy: 0.1686\n",
       "Epoch 2/15\n",
-      "4380/4380 [==============================] - 13s 3ms/step - loss: 2.6544 - accuracy: 0.3126\n",
+      "4380/4380 [==============================] - 19s 4ms/step - loss: 2.7002 - accuracy: 0.2988\n",
       "Epoch 3/15\n",
-      "4380/4380 [==============================] - 13s 3ms/step - loss: 2.3985 - accuracy: 0.3639\n",
+      "4380/4380 [==============================] - 19s 4ms/step - loss: 2.4301 - accuracy: 0.3622\n",
       "Epoch 4/15\n",
-      "4380/4380 [==============================] - 13s 3ms/step - loss: 2.2087 - accuracy: 0.4139\n",
+      "4380/4380 [==============================] - 19s 4ms/step - loss: 2.2093 - accuracy: 0.4243\n",
       "Epoch 5/15\n",
-      "4380/4380 [==============================] - 14s 3ms/step - loss: 2.0250 - accuracy: 0.4715\n",
+      "4380/4380 [==============================] - 19s 4ms/step - loss: 2.0321 - accuracy: 0.4709\n",
       "Epoch 6/15\n",
-      "4380/4380 [==============================] - 15s 3ms/step - loss: 1.8678 - accuracy: 0.5169\n",
+      "4380/4380 [==============================] - 21s 5ms/step - loss: 1.9098 - accuracy: 0.5024\n",
       "Epoch 7/15\n",
-      "4380/4380 [==============================] - 16s 4ms/step - loss: 1.7501 - accuracy: 0.5470\n",
+      "4380/4380 [==============================] - 18s 4ms/step - loss: 1.8168 - accuracy: 0.5250\n",
       "Epoch 8/15\n",
-      "4380/4380 [==============================] - 15s 3ms/step - loss: 1.6584 - accuracy: 0.5702\n",
+      "4380/4380 [==============================] - 15s 3ms/step - loss: 1.7363 - accuracy: 0.5450\n",
       "Epoch 9/15\n",
-      "4380/4380 [==============================] - 16s 4ms/step - loss: 1.5822 - accuracy: 0.5888\n",
+      "4380/4380 [==============================] - 18s 4ms/step - loss: 1.6610 - accuracy: 0.5635\n",
       "Epoch 10/15\n",
-      "4380/4380 [==============================] - 14s 3ms/step - loss: 1.5145 - accuracy: 0.6054\n",
+      "4380/4380 [==============================] - 20s 5ms/step - loss: 1.5883 - accuracy: 0.5817\n",
       "Epoch 11/15\n",
-      "4380/4380 [==============================] - 14s 3ms/step - loss: 1.4517 - accuracy: 0.6201\n",
+      "4380/4380 [==============================] - 20s 5ms/step - loss: 1.5178 - accuracy: 0.6004\n",
       "Epoch 12/15\n",
-      "4380/4380 [==============================] - 14s 3ms/step - loss: 1.3920 - accuracy: 0.6347\n",
+      "4380/4380 [==============================] - 20s 5ms/step - loss: 1.4494 - accuracy: 0.6193\n",
       "Epoch 13/15\n",
-      "4380/4380 [==============================] - 14s 3ms/step - loss: 1.3356 - accuracy: 0.6490\n",
+      "4380/4380 [==============================] - 21s 5ms/step - loss: 1.3830 - accuracy: 0.6380\n",
       "Epoch 14/15\n",
-      "4380/4380 [==============================] - 14s 3ms/step - loss: 1.2822 - accuracy: 0.6623\n",
+      "4380/4380 [==============================] - 17s 4ms/step - loss: 1.3190 - accuracy: 0.6548\n",
       "Epoch 15/15\n",
-      "4380/4380 [==============================] - 14s 3ms/step - loss: 1.2316 - accuracy: 0.6752\n"
+      "4380/4380 [==============================] - 15s 3ms/step - loss: 1.2579 - accuracy: 0.6714\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f37019a55e0>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f6697ef5e50>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
