--- a/PracticaFinal/codigo/Preproceso.ipynb
+++ b/PracticaFinal/codigo/Preproceso.ipynb
@@ -352,6 +352,8 @@
     "    text = text.replace(',', ' ')\n",
     "    text = text.replace('-', ' ')\n",
     "    text = text.replace('_', ' ')\n",
+    "    text = text.replace('–', ' ')\n",
+    "    text = text.replace('•', ' ')\n",
     "    text = text.replace('(', ' ')\n",
     "    text = text.replace(')', ' ')\n",
     "    text = text.replace('[', ' ')\n",
@@ -362,6 +364,7 @@
     "    text = text.replace('?', ' ')\n",
     "    text = text.replace('!', ' ')\n",
     "    text = text.replace('\"', ' ')\n",
+    "    text = text.replace('”', ' ')\n",
     "    text = text.replace('\\n', ' ')\n",
     "    text = text.replace('\\t', ' ')\n",
     "    text = text.replace('\\r', ' ')\n",
