embedded_multi_genres

--- a/PracticaFinal/codigo/Preproceso.ipynb
+++ b/PracticaFinal/codigo/Preproceso.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from langdetect import detect\n",
-    "import IPython"
+    "from langdetect import detect"
    ]
   },
   {
@@ -397,9 +396,9 @@
     "\n",
     "for desc, genres in data[[\"book_desc\", \"genres\"]].values:\n",
     "    try:\n",
-    "        if detect(desc) == 'en':\n",
+    "        if detect(desc) == 'en' and type(genres) == type(''):\n",
     "            desc = removeStopWords(desc)\n",
-    "            newData.append([desc, genres.split('|')[0]])\n",
+    "            newData.append([desc, genres])\n",
     "            \n",
     "    except:\n",
     "        pass"
@@ -411,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "newData = pd.DataFrame(newData, columns=[\"Description\", \"Main Genre\"])"
+    "newData = pd.DataFrame(newData, columns=[\"Description\", \"Genres\"])"
    ]
   },
   {
@@ -441,34 +440,34 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Description</th>\n",
-       "      <th>Main Genre</th>\n",
+       "      <th>Genres</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>winning make famous losing means certain death...</td>\n",
-       "      <td>Young Adult</td>\n",
+       "      <td>Young Adult|Fiction|Science Fiction|Dystopia|F...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>door end silent corridor it’s haunting harry p...</td>\n",
-       "      <td>Fantasy</td>\n",
+       "      <td>Fantasy|Young Adult|Fiction</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>unforgettable novel childhood sleepy southern ...</td>\n",
-       "      <td>Classics</td>\n",
+       "      <td>Classics|Fiction|Historical|Historical Fiction...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>three things absolutely positive first edward ...</td>\n",
-       "      <td>Young Adult</td>\n",
+       "      <td>Young Adult|Fantasy|Romance|Paranormal|Vampire...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>trying make sense horrors world war ii death r...</td>\n",
-       "      <td>Historical</td>\n",
+       "      <td>Historical|Historical Fiction|Fiction|Young Adult</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -476,50 +475,63 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43792</th>\n",
+       "      <th>43787</th>\n",
        "      <td>avi steinberg stumped defecting yeshiva harvar...</td>\n",
-       "      <td>Nonfiction</td>\n",
+       "      <td>Nonfiction|Autobiography|Memoir|Biography|Writ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43793</th>\n",
+       "      <th>43788</th>\n",
        "      <td>fearless half crazy story howard megdal decide...</td>\n",
-       "      <td>Sports</td>\n",
+       "      <td>Sports|Baseball|Sports and Games|Sports|Nonfic...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43794</th>\n",
+       "      <th>43789</th>\n",
        "      <td>icons game players got big break never quite b...</td>\n",
-       "      <td>Nonfiction</td>\n",
+       "      <td>Nonfiction|Sports and Games|Sports</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43795</th>\n",
+       "      <th>43790</th>\n",
        "      <td>soon major motion picture brad pitt tony kushn...</td>\n",
-       "      <td>Nonfiction</td>\n",
+       "      <td>Nonfiction|Autobiography|Memoir|Biography|Psyc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43796</th>\n",
-       "      <td>anthology rise novel brings together two tradi...</td>\n",
-       "      <td>Criticism</td>\n",
+       "      <th>43791</th>\n",
+       "      <td>anthology rise novel brings together tradition...</td>\n",
+       "      <td>Criticism|Literary Criticism|Philosophy|Theory...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>43797 rows × 2 columns</p>\n",
+       "<p>43792 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             Description   Main Genre\n",
-       "0      winning make famous losing means certain death...  Young Adult\n",
-       "1      door end silent corridor it’s haunting harry p...      Fantasy\n",
-       "2      unforgettable novel childhood sleepy southern ...     Classics\n",
-       "3      three things absolutely positive first edward ...  Young Adult\n",
-       "4      trying make sense horrors world war ii death r...   Historical\n",
-       "...                                                  ...          ...\n",
-       "43792  avi steinberg stumped defecting yeshiva harvar...   Nonfiction\n",
-       "43793  fearless half crazy story howard megdal decide...       Sports\n",
-       "43794  icons game players got big break never quite b...   Nonfiction\n",
-       "43795  soon major motion picture brad pitt tony kushn...   Nonfiction\n",
-       "43796  anthology rise novel brings together two tradi...    Criticism\n",
+       "                                             Description  \\\n",
+       "0      winning make famous losing means certain death...   \n",
+       "1      door end silent corridor it’s haunting harry p...   \n",
+       "2      unforgettable novel childhood sleepy southern ...   \n",
+       "3      three things absolutely positive first edward ...   \n",
+       "4      trying make sense horrors world war ii death r...   \n",
+       "...                                                  ...   \n",
+       "43787  avi steinberg stumped defecting yeshiva harvar...   \n",
+       "43788  fearless half crazy story howard megdal decide...   \n",
+       "43789  icons game players got big break never quite b...   \n",
+       "43790  soon major motion picture brad pitt tony kushn...   \n",
+       "43791  anthology rise novel brings together tradition...   \n",
        "\n",
-       "[43797 rows x 2 columns]"
+       "                                                  Genres  \n",
+       "0      Young Adult|Fiction|Science Fiction|Dystopia|F...  \n",
+       "1                            Fantasy|Young Adult|Fiction  \n",
+       "2      Classics|Fiction|Historical|Historical Fiction...  \n",
+       "3      Young Adult|Fantasy|Romance|Paranormal|Vampire...  \n",
+       "4      Historical|Historical Fiction|Fiction|Young Adult  \n",
+       "...                                                  ...  \n",
+       "43787  Nonfiction|Autobiography|Memoir|Biography|Writ...  \n",
+       "43788  Sports|Baseball|Sports and Games|Sports|Nonfic...  \n",
+       "43789                 Nonfiction|Sports and Games|Sports  \n",
+       "43790  Nonfiction|Autobiography|Memoir|Biography|Psyc...  \n",
+       "43791  Criticism|Literary Criticism|Philosophy|Theory...  \n",
+       "\n",
+       "[43792 rows x 2 columns]"
       ]
      },
      "execution_count": 7,
@@ -539,7 +551,7 @@
     {
      "data": {
       "text/plain": [
-       "(43797, 2)"
+       "(43792, 2)"
       ]
      },
      "execution_count": 8,
@@ -555,29 +567,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(195,)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "newData[\"Main Genre\"].unique().shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "newData.to_csv(\"./datos/datos_p1.csv\", index=False)"
+    "newData.to_csv(\"./datos/datos_generos.csv\", index=False)"
    ]
   }
  ],
