--- a/PracticaFinal/memoria/PRACTICA_03_GRUPO_01.tex
+++ b/PracticaFinal/memoria/PRACTICA_03_GRUPO_01.tex
@@ -29,7 +29,7 @@
 \begin{titlepage}
         \centering
         \includegraphics[width=0.75\textwidth]{img/logo_uc3m.jpg}\par\vspace{2cm}
-        {\huge\bfseries Práctica 3 \\ Sistemas Borrosos\par}
+        {\huge\bfseries Práctica Final \\ Predicción del género de libros\par}
         \vspace{0.5cm}
         {\scshape\Large Inteligencia Artificial en las Organizaciones\par}
         \vspace{1.5cm}
@@ -60,456 +60,30 @@
 
 \section{Introducción}
 
-Los sistemas borrosos hacen uso de la \textit{Lógica Difusa}, que es una técnica del área de la inteligencia artificial que permite la inclusión de conceptos humanos vagos para resolver problemas\cite{fuzzy}.
-
-\vspace{2mm}
-
-Es un tipo de lógica que reconoce más que valores de verdadero o falso, pues permiten decir el grado de verdad o falsedad de distintas variables, puediendo llegar a usar variables lingüísticas\cite{fuzzygame}.
+El objetivo de esta práctica consiste en abordar una clasificación sobre resúmenes de libros para determinar su género literario. Las razones que llevan a la elección de este problema tienen que ver con que actualmente cualquier persona con la dedicación suficiente puede escribir un libro sin la necesidad del patrocinio de una editorial, lo que conlleva una \textbf{explosión en el número de nuevos libros generados}. Por consiguiente, las librerías y bibliotecas necesitan catalogar una gran cantidad de escritos, lo cual, les lleva a necesitar de métodos de clasificación automática. Por ello, se plantea el uso de resúmenes y metadatos de los libros puesto que la tarea de clasificación \textbf{debe poder realizarse con el menor número de datos posible}, puesto que no todos los libros que llegan a estas entidades disponen de todos los datos completos.
 
 \vspace{3mm}
 
-Este tipo de sistemas expertos intenta abordar los problemas tal y como lo haría un humano: en términos relativos, y en grados de pertenencia. Estos conceptos vagos son los que usan normalmente los humanos a la hora de razonar.
+La primera cuestión imprescindible que surge al conocer el problema propuesto es qué técnica de Inteligencia Artificial emplear. Dado que se realiza un análisis sobre diferentes textos, la opción evidente es la \textbf{Minería de Texto}, la cual es una técnica de minería de datos que busca extraer \textbf{información útil y relevante de documentos de texto} de diferentes fuentes diferentes, como puede ser páginas web,
+correos electrónicos, periódicos o redes sociales. Para ello, se hace una identificación de patrones en los datos, como puede ser la repetición de palabras o conjuntos de palabras, estructuras sintácticas que se repitan a lo largo de los datos, etc. Esta minería de texto tiene numerosas aplicaciones, y en esta práctica se van a desarrollar una clasificación en función de unas categorías que serán definidas gracias a la elección de un dataset apropiado.
 
 \vspace{3mm}
 
-Los dos problemas que se plantean están fuertemente relacionados con el \textit{COVID-19}. Se trata de crear dos sistemas borrosos capaces de decidir, por un lado \textbf{cuándo hay que confinar una población} y, por otro, \textbf{cuándo hay que realizar una prueba PCR a un paciente}. Estos problemas pueden ser solucionados a través de sistemas borrosos porque las variables involucradas, tanto de entrada como de salida, pueden ser transformadas en el grado de pertenencia a una clase concreta.
+A continuación se ofrece un\textbf{ esquema del funcionamiento de la tarea propuesta }en donde un libro sin catalogación llega a alguna a de estas entidades que necesitan catalogar su género a partir de la información más reducida posible (generalmente título y argumento). Inicialmente se plantea la distinción de un único género, sin embargo, \textbf{es bien sabido que un escrito no tiene por qué adscribirse a un único género} y por lo tanto se debe considerar como futura \textbf{ampliación} catalogar tantos como sea posible.
 
-\vspace{4mm}
+\vspace{12mm}
 
-Es importante remarcar que los datos que se han usado para la resolución de la práctica, a falta de contactos con expertos, se han tomado de distintas fuentes del \textit{Ministerio de Sanidad}\cite{poblacion, paciente} de España. Para poder complementar los sistemas borrosos, ya que requerían de más información, se han interpretado estos valores por los autores. Por tanto, sería necesario realizar una revisión a través de expertos, ya sean médicos, virólogos o epidemiólogos que puedan confirmar o corregir los valores y franjas introducidas.
-
-\vspace{3mm}
-
-Sí es cierto que el criterio de realización de pruebas PCR, a pesar de que pueda llegar a ser distinto en cada país, está muy bien acotado y definido. Esto ha faciltado la realización de su sistema borroso.
-
-\vspace{2mm}
-
-No es así en el caso del sistema borroso para decidir si confinar o no una población, puesto que no está explicado ni expuesto correctamente en ningún documento público. A pesar de que el \textit{Ministerio de Sanidad}\cite{poblacion} incluya unas directrices que informen de los rangos de valores para diferentes niveles de riesgo, no indica a partir de cuales de esos valores se tiene que confinar.
-
-\vspace{4mm}
-
-Para resolver los problemas propuestos se utiliza la herramienta \textit{Fuzzy Logic Toolbox (FLT)} de MATLAB debido a que permite manejar fácilmente los principales aspectos cuando se quiere crear un sistema borroso.
-
-\newpage
-
-\section{Contexto de la práctica}
-
-La lógica difusa es muy útil cuando se desea representar y operar con conceptos que tengan imprecisión y sirve cuando hay ciertas partes del sistema a controlar que son desconocidas y no pueden medirse de forma fiable.
-
-\vspace{3mm}
-
-Los sistemas borrosos, al igual que numerosas técnicas de IA, puede ser aplicada sobre muchos tipos de problemas diferentes, como, por ejemplo, en diagnóstico médico, intercambio de acciones de bolsa, optimización de centrales de energía, e incluso el manejo automático de un helicóptero\cite{fuzzy}.
-
-\vspace{2mm}
-
-Un caso que puede resultar especialmente llamativo es el uso de la lógica difusa para controlar un NPC (\textit{Non-Playable Characters}) en un videojuego\cite{fuzzygame}. Este pequeño caso de estudio intentaba y conseguía demostrar la eficacia y simpleza que resulta la aplciación este tipo de soluciones a entornos dinámicos.
-
-\vspace{3mm}
-
-Otro caso que demuestra la gran utilidad de estos métodos es su uso en un sistema mixto, junto a algoritmos genéticos, para encontrar un equilibrio entre satisfacción de los clientes y obtención de beneficio en la planificación de horarios de trenes\cite{fuzzytrain}. En este caso se prueba el uso de un sistema borroso como solución de una parte de un problema más grande, y que se soluciona con algoritmos y métodos más potentes.
-
-\vspace{3mm}
-
-Los autores del documento plantearon un esquema general de resolución basado en algoritmos genéticos, sin embargo, se encontraron con el problema de encontrar una tasa de mutación y sobrecruzamiento adecuada. El problema consistía en que una tasa fija no era capaz de encontrar la solución óptima al problema, necesitaban tasas variables que eran difíciles de aproximar mediante una fórmula debido a la complejidad que exigiría la misma. Por ello, debido al grado de incertidumbre existente a la hora de determinar dichas tasas se planteó un sistema de lógica difusa que, en función de la diversidad genética de la población considerada, era capaz de encontrar valores apropiados para las mismas. Esto permitió que el algoritmo encontrara la solución óptima en el problema. La figura~\ref{genetic_fuzzy} muestra en qué parte del algoritmo genético se realiza la implementación de lógica difusa.
-
-\begin{figure}[!h]
+  \begin{figure}[!h]
     \centering
-    \includegraphics[width=230px]{img/genetic_fuzzy.png}
-    \caption{Algoritmo que implementa lógica difusa\cite{fuzzytrain}}
-    \label{genetic_fuzzy}
-\end{figure}
-
-
-\vspace{3mm}
-
-En otro área de aplicación completamente distinto al anterior se encuentra este otro caso \cite{fuzzyfashion}. Este estudio, que se llevó a la práctica en una cadena de tiendas de ropa en Hong Kong (figura~\ref{fuzzy_shop}), era capaz de recomendar, de entre una lista de posibilidades, los artículos de ropa que mejor combinaban.
-
-\vspace{1mm}
-
-Normalmente, los diseñadores de moda toman estas decisiones sobre combinación de artículos de manera subjetiva basándose en sus conocimientos y utilizan términos lingüísticos como bueno, aceptable o malo. Por ello, utilizan la lógica difusa junto con el sistema experto para llevar a cabo esta tarea. Cabe destacar que utilizan métodos de detección para reducir el tamaño del problema, ya que presenta un gran número de posibles combinaciones para múltiples artículos.
-
-\vspace{2mm}
-
-Los resultados del estudio sobre casos reales demuestran que el sistema propuesto es eficaz para coordinar pares de prendas entre un conjunto dado y proporciona un nivel muy alto de precisión, muy similar a lo que hacen los diseñadores de moda.
-
-\begin{figure}[!h]
-    \centering
-    \includegraphics[width=300px]{img/fuzzy_shop.png}
-    \caption{Implementación en una tienda real del sistema borroso\cite{fuzzyfashion}}
-    \label{fuzzy_shop}
-\end{figure}
+    \includegraphics[width=450px]{img/Animal Farm.png}
+    \caption{Esquema de la tarea}
+    \end{figure}
 
 \newpage
 
-\section{Sistema borroso: Confinamiento}
-De manera inicial se plantea el desarrollo de un sistema borroso que decida la conveniencia o no de confinar a una población en función de una serie de parámetros o variables de entrada. El sistema se detalla en mayor profundidad en las siguientes secciones.
-
-\subsection{Variables de entrada}
-Tras un estudio meticuloso de las variables relevantes en la tarea que se trata de resolver y, mediante el apoyo en la información oficial proporcionada en el ámbito de la \textit{Estrategia Nacional para la COVID-19 del Gobierno de España} \cite{poblacion}, se determinan como relevantes la siguiente relación de variables.
-
-\begin{itemize}
-
-    \item \textbf{Incidencia acumulada de casos diagnosticados en 14 días} (IA-14): casos confirmados en 14 días por cada 100.000 habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{IA-14} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
-
-    \begin{figure}[!h]
-      \centering
-      \includegraphics[width=300px]{img/ia_ac_14.png}
-      \caption{IA-14}
-      \label{IA-14}
-    \end{figure}
-
-    \item \textbf{Incidencia acumulada de casos diagnosticados en 7 días} (IA-7): casos confirmados en 7 días por cada 100.000 habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{IA-7} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
-
-    \begin{figure}[!h]
-      \centering
-      \includegraphics[width=300px]{img/ia_ac_7.png}
-      \caption{IA-7}
-      \label{IA-7}
-    \end{figure}
-
-    \item \textbf{Incidencia acumulada de casos diagnosticados en Incidencia acumulada de casos con 65 o más años diagnosticados en 14 días} (IA-14 65): casos en población superior a 65 años confirmados en 14 días por cada 100.000 habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{IA-14 65} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
-    \newpage
-    \begin{figure}[!h]
-      \centering
-      \includegraphics[width=300px]{img/ia_65_14.png}
-      \caption{IA-14 65}
-      \label{IA-14 65}
-    \end{figure}
-
-    \item \textbf{Incidencia acumulada de casos diagnosticados en Incidencia acumulada de casos con 65 o más años diagnosticados en 7 días} (IA-7 65): casos en población superior a 65 años confirmados en 7 días por cada 100.000 habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{IA-7 65} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
-
-    \begin{figure}[!h]
-      \centering
-      \includegraphics[width=300px]{img/ia_65_7.png}
-      \caption{IA-7 65}
-      \label{IA-7 65}
-    \end{figure}
-
-    \item \textbf{Positividad global de las PDIA (Prueba Diagnóstica de Infección Activa) por semana} (PDIA): porcentaje de pruebas con resultado positivo en 7 días. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{PDIA} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
-
-    \begin{figure}[!h]
-      \centering
-      \includegraphics[width=300px]{img/PDIA.png}
-      \caption{PDIA}
-      \label{PDIA}
-    \end{figure}
-
-    \item \textbf{Ocupación de camas de cuidados críticos por casos de COVID-19} (UCI): proporción de camas de cuidados críticos ocupadas por casos de COVID. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{cUCI} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
-
-    \begin{figure}[!h]
-      \centering
-      \includegraphics[width=300px]{img/camas_UCI.png}
-      \caption{UCI}
-      \label{cUCI}
-    \end{figure}
-
-    \item \textbf{Ocupación de camas de hospitalización por casos de COVID-19} (Camas): proporción de camas de hospitalización ocupadas por casos de COVID. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo}, \textit{Medio}, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{Camas} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
-
-    \begin{figure}[!h]
-      \centering
-      \includegraphics[width=300px]{img/ocupacion_camas.png}
-      \caption{Camas}
-      \label{Camas}
-    \end{figure}
-
-    \end{itemize}
-
-\subsection{Variable de salida}
-
-Se establece como variable de salida el hecho de confinar o no una población en función de tres niveles diferenciados. \textit{No confinar, Considerar el confinamiento y Sí confinar}. Se hace hincapié en el sentido del valor \textit{Considerar el confinamiento} que indica a los responsables de confinar un territorio que sería recomendable hacerlo atendiendo únicamente a razones sanitarias, pero que existe capacidad de discusión de otro tipo de medidas que no perjudiquen en esa medida a los sectores productivos de la población. La figura~\ref{Confinar} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
-
-\begin{figure}[!h]
-  \centering
-  \includegraphics[width=300px]{img/confinar.png}
-  \caption{Confinar}
-  \label{Confinar}
-\end{figure}
-\newpage
-\subsection{Reglas}
-
-Todas las reglas son del tipo \textit{AND} menos la primera que es del tipo \textit{OR}. Pese a que las variables escogidas han sido selecionadas en conformidad a los criterios establecidos en la \textit{Estrategia Nacional para la COVID-19 del Gobierno de España} \cite{poblacion}, las reglas mostradas son de elaboración propia dado que el documento del gobierno no proporciona criterios relativos al confinamiento de los distintos territorios.
-
-\begin{figure}[!h]
-  \centering
-\begin{tabular}{c|c|c|c|c|c|c|c|c|}
-  \cline{2-9}
-                                & IA-14 & IA-7 & IA-14 65 & IA-7 65 & PDI & UCI & Camas & \textbf{Confinar} \\ \hline
-\multicolumn{1}{|c|}{Regla 1} & \begin{tabular}[c]{@{}c@{}}Muy\\ alto\end{tabular} & \begin{tabular}[c]{@{}c@{}}Muy\\ alto\end{tabular} & \begin{tabular}[c]{@{}c@{}}Muy\\ alto\end{tabular} & \begin{tabular}[c]{@{}c@{}}Muy\\ alto\end{tabular} & \begin{tabular}[c]{@{}c@{}}Muy\\ alto\end{tabular} & \begin{tabular}[c]{@{}c@{}}Muy\\ alto\end{tabular} & \begin{tabular}[c]{@{}c@{}}Muy\\ alto\end{tabular}& Sí \\ \hline
-\multicolumn{1}{|c|}{Regla 2} & Medio & Medio & - & - & - & - & Alto & Sí \\ \hline
-\multicolumn{1}{|c|}{Regla 3} & Alto & Alto & Alto & Alto & Alto & Alto & Alto & Sí \\ \hline
-\multicolumn{1}{|c|}{Regla 4} & \begin{tabular}[c]{@{}c@{}}Nueva\\ norm.\end{tabular} & \begin{tabular}[c]{@{}c@{}}Nueva\\ norm.\end{tabular} & \begin{tabular}[c]{@{}c@{}}Nueva\\ norm.\end{tabular} & \begin{tabular}[c]{@{}c@{}}Nueva\\ norm.\end{tabular} & \begin{tabular}[c]{@{}c@{}}Nueva\\ norm.\end{tabular} & \begin{tabular}[c]{@{}c@{}}Nueva\\ norm.\end{tabular} & \begin{tabular}[c]{@{}c@{}}Nueva\\ norm.\end{tabular} & No \\ \hline
-\multicolumn{1}{|c|}{Regla 5} & Bajo & Alto & - & - & - & - & - & Sí \\ \hline
-\multicolumn{1}{|c|}{Regla 6} & Bajo & Medio & - & - & - & - & - & Considerar \\ \hline
-\multicolumn{1}{|c|}{Regla 7} & Medio & Medio & - & - & - & Alto & - & Sí \\ \hline
-\multicolumn{1}{|c|}{Regla 8} & - & - & - & - & - & Bajo & Bajo & No \\ \hline
-\multicolumn{1}{|c|}{Regla 9} & Medio & Medio & Alto & Alto & - & - & - & Sí \\ \hline
-\multicolumn{1}{|c|}{Regla 10} & Medio & Medio & - & - & - & \begin{tabular}[c]{@{}c@{}}Nueva\\ norm.\end{tabular} & \begin{tabular}[c]{@{}c@{}}Nueva\\ norm.\end{tabular} & No \\ \hline
-\multicolumn{1}{|c|}{Regla 11} & Bajo & Bajo & Bajo & Bajo & Bajo & Bajo & Bajo & No \\ \hline
-\multicolumn{1}{|c|}{Regla 12} & Alto & Bajo & - & - & - & - & - & No \\ \hline
-\multicolumn{1}{|c|}{Regla 13} & - & - & Bajo & Alto & - & - & - & Considerar \\ \hline
-\multicolumn{1}{|c|}{Regla 14} & - & - & - & - & Alto & - & - & Considerar \\ \hline
-\end{tabular}
-\caption{Reglas del Sistema Borroso del Confinamiento}
-\end{figure}
-
-\clearpage
-
-\section{Sistema borroso: Prueba PCR}
-
-Este segundo sistema basado en lógica borrosa debe decidir si dado un paciente, es o no candidato a que se le realice una prueba PCR. Para ello, se definen una serie de variables de entrada obtenidas del \textit{Ministerio de Sanidad}\cite{paciente}, se ha decidido seleccionar aquellas que se cree que son más relevantes. Además, se establece la variable de salida y por último las reglas para la toma de decisiones.
-
-\vspace{2mm}
-
-Un sistema que consiga resolver este problema de forma eficaz sería de gran ayuda en los centros médicos, ya que aliviaría la carga de trabajo de los médicos y sería de utilidad a la hora de tomar decisiones sobre casos inconcluyentes.
-
-
-\subsection{Variables de entrada}
-
-Las entradas del sistema seleccionadas son:
-
-\begin{itemize}
-  \item \textbf{Días desde primeros síntomas} (DDPS) figura~\ref{DDPS}: representa el número de días que el paciente lleva con síntomas relacionados con el \textit{COVID-19}. Sus posibles valores son: \textit{Pocos}, \textit{Medios} y \textit{Muchos}.
-
-  \begin{figure}[!h]
-      \centering
-      \includegraphics[width=300px]{img/dias_primeros_sintomas.png}
-      \caption{DDPS}
-      \label{DDPS}
-  \end{figure}
-
-  \item \textbf{Prueba rápida} figura~\ref{PR}: si el paciente ha dado positivo o negativo en una prueba rápida, por lo tanto sus valores son solo \textit{Sí} o \textit{No}. Si al paciente no se le ha realizado ninguna prueba rápida se representará con un 0,5.
-
-  \begin{figure}[!h]
-      \centering
-      \includegraphics[width=300px]{img/prueba_rapida.png}
-      \caption{Prueba rápida}
-      \label{PR}
-  \end{figure}
-
-  \item \textbf{PCR} figura~\ref{PCR}: si el paciente ha dado positivo o negativo en una prueba PCR, al igual que en la variable anterior, sus valores son solo \textit{Sí} o \textit{No}. Si al paciente no se le ha realizado ninguna PCR se representará con un 0,5.
-
-  \clearpage
-
-  \begin{figure}[!h]
-      \centering
-      \includegraphics[width=300px]{img/PCR.png}
-      \caption{PCR}
-      \label{PCR}
-  \end{figure}
-
-  \item \textbf{UCI} figura~\ref{UCI}: si el paciente tiene que ser ingresado en la UCI, posibles valores: \textit{Sí} o \textit{No}.
-
-  \begin{figure}[!h]
-      \centering
-      \includegraphics[width=300px]{img/UCI.png}
-      \caption{UCI}
-      \label{UCI}
-  \end{figure}
-
-  \item \textbf{Sospecha clínica} figura~\ref{SC}: creencia del médico de si el paciente puede tener o no el \textit{COVID-19}. Toma valores de \textit{Baja}, \textit{Media} y \textit{Alta}.
-
-  \begin{figure}[!h]
-      \centering
-      \includegraphics[width=300px]{img/sospecha_clinica.png}
-      \caption{Sospecha clínica}
-      \label{SC}
-  \end{figure}
-
-  \item \textbf{Días desde contacto positivo} (DDCP) figura~\ref{DDCP}: representa el número de días desde que el paciente ha estado en contacto con una persona positiva de \textit{COVID-19}. Sus posibles valores son: \textit{Pocos}, \textit{Medios} y \textit{Muchos}.
-
-  \begin{figure}[!h]
-      \centering
-      \includegraphics[width=300px]{img/dias_desde_cntcto_positivo.png}
-      \caption{DDCP}
-      \label{DDCP}
-  \end{figure}
-
-  \item \textbf{Síntomas} figura~\ref{Sintomas}: indica el número de síntomas de \textit{COVID-19} que tiene el paciente. Puede tomar valores de \textit{Ninguno}, \textit{Alguno}, \textit{Varios} y \textit{Todos}.
-
-  \clearpage
-
-  \begin{figure}[!h]
-      \centering
-      \includegraphics[width=300px]{img/sintomas.png}
-      \caption{Síntomas}
-      \label{Sintomas}
-  \end{figure}
-
-  \item \textbf{Uso mascarilla con no convivientes} (UMNC) figura~\ref{UMNC}: si el paciente usa regularmente la mascarilla cuando se encuentra con personas con las que no convive, sus valores son solo \textit{Sí} o \textit{No}.
-
-  \begin{figure}[!h]
-      \centering
-      \includegraphics[width=300px]{img/uso_mascarilla.png}
-      \caption{UMNC}
-      \label{UMNC}
-  \end{figure}
-
-\end{itemize}
-
-
-
-\subsection{Variable de salida}
-
-Como la decisión a tomar es si se debe realizar o no una prueba PCR, la salida del sistema es la certeza que se tiene de si se debe realizar la prueba o no al paciente. Sus valores son \textit{Sí} o \textit{No} (figura~\ref{realizarPCR}).
-
-\begin{figure}[!h]
-    \centering
-    \includegraphics[width=300px]{img/realizar_pcr.png}
-    \caption{Realizar PCR}
-    \label{realizarPCR}
-\end{figure}
-
-\newpage
-
-\subsection{Reglas}
-
-Todas las reglas son del tipo \textit{AND}. Para las 7 primeras reglas se ha tomado como referencia la información del \textit{Ministerio de Sanidad}\cite{paciente}, las siguientes son creadas bajo el criterio de los autores con el fin de completar la funcionalidad del sistema.
-
-\begin{figure}[!h]
-  \begin{adjustwidth}{-1.4cm}{}
-\begin{tabular}{c|c|c|c|c|c|c|c|c|c|}
-  \cline{2-10}
-                                & DDPS & \begin{tabular}[c]{@{}c@{}}Prueba\\ Rápida\end{tabular} & PCR & UCI & \begin{tabular}[c]{@{}c@{}}Sospecha\\ Clínica\end{tabular} & DDCP & Síntomas & UMNC & \begin{tabular}[c]{@{}c@{}}\textbf{Realizar}\\ \textbf{PCR}\end{tabular} \\ \hline
-\multicolumn{1}{|c|}{Regla 1} & \textit{Not} Pocos & - & - & - & - & - & - & - & Sí \\ \hline
-\multicolumn{1}{|c|}{Regla 2} & - & - & No & - & Alta & - & - & - & Sí \\ \hline
-\multicolumn{1}{|c|}{Regla 3} & - & No & - & - & Alta & - & - & - & Sí \\ \hline
-\multicolumn{1}{|c|}{Regla 4} & \textit{Not} Pocos & No & - & - & - & - & - & - & Sí \\ \hline
-\multicolumn{1}{|c|}{Regla 5} & - & - & Sí & - & - & - & - & - & Sí \\ \hline
-\multicolumn{1}{|c|}{Regla 6} & - & - & - & - & - & Muchos & Ninguno & - & No \\ \hline
-\multicolumn{1}{|c|}{Regla 7} & - & - & - & - & - & \textit{Not} Muchos & Ninguno & Sí & No \\ \hline
-\multicolumn{1}{|c|}{Regla 8} & Pocos & - & - & - & \textit{Not} Alta & - & - & - & No \\ \hline
-\multicolumn{1}{|c|}{Regla 9} & - & Sí & - & - & Baja & - & - & - & Sí \\ \hline
-\multicolumn{1}{|c|}{Regla 10} & - & - & - & - & - & \textit{Not} Muchos & \textit{Not} Ninguno & No & Sí \\ \hline
-\multicolumn{1}{|c|}{Regla 11} & \textit{Not} Pocos & - & - & - & - & - & Todos & - & Sí \\ \hline
-\multicolumn{1}{|c|}{Regla 12} & - & No & - & - & Baja & - & - & - & No \\ \hline
-\multicolumn{1}{|c|}{Regla 13} & - & No & - & - & - & - & Varios & - & No \\ \hline
-\multicolumn{1}{|c|}{Regla 14} & - & - & - & - & \textit{Not} Alta & - & Alguno & - & No \\ \hline
-\end{tabular}
-\end{adjustwidth}
-\caption{Reglas del Sistema Borroso del PCR}
-\end{figure}
-
-
-\newpage
-
-\section{Validación del sistema}
-
-Para la realización de las pruebas, inicialmente, se deseaba encontrar información real de diferentes localidades\cite{cant, cana} y pacientes. Por desgracia, no se encontraron suficientes datos que fueran representativos. Por ello, fue necesario probar los sistemas con casos elaborados por los autores, de forma que se intentaba comprobar la robustez de los sistemas.
-
-\vspace{3mm}
-
-Para la elección de las pruebas se ha optado en primera instancia por evaluar los sistemas con pruebas donde las variables pertenecen al mismo nivel. Más tarde, se ha probado a evaluar al sistema con mezcla de valores de distintos niveles, para comprobar el comportamiento de los sistemas con diferentes tipos de complejidad.
-
-  \subsection{Confinamiento}
-
-    \begin{figure}[!h]
-      \centering
-    \begin{tabular}{c|c|c|c|c|c|c|c|c|}
-      \cline{2-9}
-                                    & IA-14 & IA-7 & IA-14 65 & IA-7 65 & PDI & UCI & Camas & \textbf{Prob. Confinar} \\ \hline
-    \multicolumn{1}{|c|}{Prueba 1} & 300 & 200 & 200 & 100 & 23 & 28 & 18 & 0.8571 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 2} & 400 & 150 & 150 & 200 & 29 & 23 & 15 & 0.8571 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 3} & 160 & 80 & 110 & 55 & 11 & 16 & 11 & 0.6936 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 4} & 240 & 120 & 140 & 70 & 14 & 23 & 14 & 0.7550 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 5} & 55 & 30 & 60 & 35 & 8 & 11 & 6 & 0.5427 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 6} & 60 & 40 & 50 & 40 & 9 & 14 & 8 & 0.6622 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 7} & 30 & 15 & 30 & 13 & 5 & 7 & 3 & 0.1709 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 8} & 40 & 20 & 40 & 20 & 7 & 9 & 4 & 0.2129 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 9} & 5 & 3 & 2 & 2 & 1 & 2 & 0 & 0.1458 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 10} & 20 & 9 & 15 & 9 & 3 & 4 & 2 & 0.2158 \\ \hline
-    \end{tabular}
-    \caption{Pruebas Básica del Sistema Borroso del Confinamiento}
-  \end{figure}
-
-
-    \begin{figure}[!h]
-      \centering
-    \begin{tabular}{c|c|c|c|c|c|c|c|c|}
-      \cline{2-9}
-                                    & IA-14 & IA-7 & IA-14 65 & IA-7 65 & PDI & UCI & Camas & \textbf{Prob. Confinar} \\ \hline
-    \multicolumn{1}{|c|}{Prueba 1} & 100 & 100 & 15 & 60 & 8 & 7 & 12 & 0.7755 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 2} & 5 & 21 & 125 & 5 & 2 & 25 & 4 & 0.8164 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 3} & 200 & 25 & 75 & 20 & 4 & 13 & 16 & 0.6410 \\ \hline
-    \end{tabular}
-    \caption{Pruebas Mixtas del Sistema Borroso del Confinamiento}
-  \end{figure}
-
-  \newpage
-
-  \subsection{Prueba PCR}
-
-    \begin{figure}[!h]
-      \centering
-    \begin{tabular}{c|c|c|c|c|c|c|c|c|c|}
-      \cline{2-10}
-                                    & DDPS & \begin{tabular}[c]{@{}c@{}}Prueba\\ Rápida\end{tabular} & PCR & UCI & \begin{tabular}[c]{@{}c@{}}Sospecha\\ Clínica\end{tabular} & DDCP & Síntomas & UMNC & \begin{tabular}[c]{@{}c@{}}\textbf{Prob.}\\ \textbf{Realizar}\\ \textbf{PCR}\end{tabular} \\ \hline
-    \multicolumn{1}{|c|}{Prueba 1} & 1.5 & 0.5 & 0.5 & 0 & 0.1 & 1.5 & 0.5 & 0.1 & 0.5033 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 2} & 3 & 0.5 & 0.5 & 0 & 0.2 & 3 & 1 & 0.2 & 0.472 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 3} & 4.5 & 0.5 & 0.5 & 0 & 0.3 & 4.5 & 1.5 & 0.3 & 0.5633 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 4} & 6 & 0 & 0.5 & 0 & 0.4 & 0.6 & 2 & 0.4 & 0.7228 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 5} & 7.5 & 0.5 & 0 & 0 & 0.5 & 7,5 & 2.5 & 0.5 & 0.7807 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 6} & 9 & 0.5 & 1 & 0 & 0.5 & 9 & 3 & 0.6 & 0.7807 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 7} & 10.5 & 0.5 & 1 & 1 &0.6 & 10.5 & 3.5 & 0.7 & 0.7807 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 8} & 12 & 1 & 0.5 & 0 & 0.7 & 12 & 4 & 0.80 & 0.8279 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 9} & 13 & 1 & 0.5 & 1 & 0.8 & 13.5 & 4.5 & 0.9 & 0.8279 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 10} & 15 & 1 & 0.5 & 0 & 0.1 & 0.0 & 0.0 & 0.0 & 0.8279 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 11} & 10 & 0 & 0.5 & 0 & 0.1 & 0.0 & 0.0 & 0.0 & 0.7245 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 12} & 8 & 1 & 0.5 & 0 & 0.1 & 0.0 & 0.0 & 0.0 & 0.8279 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 13} & 4 & 1 & 0.5 & 0 & 0.1 & 0.0 & 0.0 & 0.0 & 0.7617 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 14} & 0 & 1 & 0.5 & 0 & 0 & 5 & 0 & 1 & 0.5 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 15} & 10 & 0.5 & 1 & 0 & 0.2 & 15 & 1 & 0.9 & 0.5 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 16} & 10 & 0.5 & 1 & 0 & 0.8 & 12 & 3 & 0.9 & 0.7807 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 17} & 2 & 0.5 & 0.5 & 1 & 0.5 & 6 & 3 & 0.8 & 0.5146 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 18} & 2 & 0.5 & 0.5 & 0 & 0.3 & 2 & 0 & 0.9 & 0.2947 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 19} & 15 & 1 & 1 & 0 & 0.2 & 7 & 1 & 0.75 & 0.5 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 20} & 7 & 0 & 0 & 0 & 0.4 & 9 & 2 & 0.6 & 0.7245 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 21} & 14 & 0.5 & 0 & 0 & 0.4 & 7 & 5 & 0.1 & 0.7807 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 22} & 2 & 1 & 0.5 & 1 & 0.9 & 3 & 0 & 0.8 & 0.5228 \\ \hline
-    \multicolumn{1}{|c|}{Prueba 23} & 7 & 0 & 0 & 0 & 0.6 & 14 & 1 & 0.2 & 0.5052 \\ \hline
-    \end{tabular}
-    \caption{Pruebas del Sistema Borroso del PCR}
-  \end{figure}
-
-  \newpage
-
-  \subsection{Analisis de los resultados}
-
-  Respecto a la primera serie de pruebas realizadas sobre el sistema que trata de determinar el confinamiento de un determinado territorio, se observa que las pruebas básicas arrojan buenos resultados, puesto que se mantiene cada nivel previsto en relación a los niveles en los que se encuentran las variables de entrada. Este hecho aporta una primera aproximación que permite determinar que no hay fallos graves o incongruencias entre las distintas reglas.
-
-  \vspace{2mm}
-
-  Por su parte, y para asegurar que el sistema funciona de manera adecuada incluso cuando determinar el nivel de confinamiento no resulta una tarea sencilla (cuando hay variables de entrada en unos niveles y otras en niveles diferentes), se ve que con pruebas que se asemejan más a casos reales, el resultado obtenido sigue el mismo criterio, por lo que se puede asegurar que el sistema funciona de manera adecuada.
-
-  \vspace{4mm}
-
-  En la segunda serie de pruebas se obtienen resultados similares al determinarse que la necesidad de una prueba PCR aumenta de forma gradual en los 10 primeros casos, los cuales están construidos de manera que la gravedad se va incrementando. Adicionalmente, a partir de la prueba número 10 se pueden catalogar como exitosos los resultados puesto que la mayoría de pacientes necesita una prueba PRC y se distingue correctamente cómo de urgente es realizarla o si puede esperar, puesto que se debe recordar que un valor superior a 0.5 implica que se necesita una prueba PCR, pero, cuánto más elevado sea este valor, más urgente será la realización de la prueba.
-
-  \vspace{5mm}
-
-  Pese a que se ha determinado que los resultados obtenidos son moderadamente buenos, existe margen de mejora. Sería necesario para ello estudiar más en profundidad los distintos casos posibles con ayuda de especialistas o expertos para aumentar el número de reglas, contemplar un mayor número de ejemplos, ajustar mejor los límites de los conjuntos borrosos para aumentar así la precisión del sistema.
-
-\newpage
+\section{Conceptos teóricos}
 
 \section{Conclusiones}
-
-  A lo largo del desarrollo de esta práctica se ha profundizado en la técnica de \textit{Lógica Difusa}, que presenta un enfoque muy diferenciado de otras técnicas de Inteligencia Artificial, puesto que permite la resolución de problemas para los cuales no existe una alternativa eficiente que sea \textbf{capaz de trabajar con la incertidumbre humana}. Por todo ello, esta práctica resulta de utilidad si se pretende introducirse en ese mundo de manera sucinta. Sin embargo, también impone la resolución de unos retos que deben ser solucionados si se pretende afrontar aplicaciones reales.
-
-  \vspace{2mm}
-
-  Entre las principales desventajas o retos que acarrea esta técnica está la \textbf{dificultad de establecer reglas} exactas, así como los distintos intervalos de cada una de las variables para disponer de un sistema lo más fiel posible. Esto es así debido a las propias características de la lógica difusa, puesto que al ser capaz de trabajar con la incertidumbre humana pierde la capacidad de detectar patrones inadvertidos a los humanos como sí pueden encontrar, por ejemplo, las redes de neuronas.
-
-  \vspace{2mm}
-
-
-  Otra piedra en el camino a la hora de realizar una tarea de lógica difusa con éxito consiste en encontrar una \textbf{fuente fiable de conocimiento} para posibilitar la creación de reglas y casos de prueba, lo cual se pone de manifiesto en situaciones tan caóticas como la epidemia de \textit{SARS-CoV-2}.
-
-  \vspace{2mm}
-
-  A pesar de sus múltiples desventajas, la lógica difusa es una técnica especialmente útil sobre todo si se contrasta con otras técnicas conocidas como caja negra, es \textbf{fácil obtener explicaciones} sobre los resultados en base a las reglas activadas.
-
-  \vspace{3mm}
-
-  A modo de conclusión se destaca la importancia de disponer de distintas herramientas de inteligencia artificial que permitan su aplicación en situaciones bien diferenciadas, permitiendo de esta manera seleccionar la técnica que mejor se adapte a lo que se pretende obtener en cada momento. Puesto que no existen técnicas universales, la tarea de un ingeniero experto en inteligencia artificial debe ser la de seleccionar el conjunto de técnicas que mejor funcione para cada problema.
 
 \clearpage
 
